--- a/style/main.css
+++ b/style/main.css
@@ -27,6 +27,12 @@ h1, h2, h3
     margin-top: 30px;
 }
 
+#content p:first-of-type:first-letter
+{
+   font-size: 2em;
+   font-family: times;
+}
+
 #header #title
 {
     text-align: center;
@@ -35,6 +41,32 @@ h1, h2, h3
     padding-bottom: 5px;
 }
 
+blockquote 
+{
+  background: #f9f9f9;
+  border-left: 4px solid #ccc;
+  font-size: 0.9em;
+  font-style: italic;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+
+blockquote p 
+{
+  display: inline;
+}
+
+blockquote cite
+{
+  font-size: 0.8em;
+  display: block;
+}
+
+blockquote cite:before 
+{
+ content: "\2014 \2009";
+}
 @media screen and (max-width: 1028px), (max-device-width: 1080px)
 {
     body
