--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<link href="static/main.css" media="screen" rel="stylesheet" type="text/css" />
+	<link href="/static/main.css" media="screen" rel="stylesheet" type="text/css" />
 	<title>{{ post.title }}</title>
 </head>
 <body>
