--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,15 +8,15 @@
 <body>
 <span itemscope itemtype="http://schema.org/BlogPosting">
 <div id="header">
-    <h1 itemprop="name" id="title">{{ post.title }}</h1>
+    <h1 itemprop="name" id="title">{{ page.title }}</h1>
 	<h3 class="signature">
 		By
 		<span itemprop="author" itemscope itemtype="http://schema.org/Person" class="author">
-			<span itemprop="givenName">SideStep</span>
-			<a itemprop="sameAs" target="_blank" href="https://gitlab.com/sidestep">@SideStep</a>
+			<span itemprop="givenName">sidestep</span>
+			<a itemprop="sameAs" target="_blank" href="https://gitlab.com/sidestep">@sidestep</a>
 		</span>
 	on <span itemprop="dateCreated">{{ page.date | date: "%-d %B %Y" }}</span>
-    tags: {% for tag in post.tags %} {{ tag }} {% endfor %}
+    tags: {% for tag in page.tags %} {{ tag }} {% endfor %}
 </div>
 <div id="content" itemprop="text">
 {{ content }}
