--- a/static/main.css
+++ b/static/main.css
@@ -2,16 +2,25 @@ body
 { 
     margin: 0; 
     padding: 0;
-    background-color: #FAFAFA;
+    background-color: #F8F8F8;
     width: 45%; 
     margin: 0 auto;
     text-align: left;
     color: rgba(0,0,0,0.9);
     letter-spacing: 0.01em;
-    font-family: Georgia, serif;
+    font-family: Arial, Georgia, Serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.75;
+}
+
+#content
+{
+    font-family: "Sans serif", Serif;
+    font-size: 1.1em;
+    line-height: 150%;
+    margin-top: 30px;
+    margin-left: 20px;
 }
 
 .signature .tags
@@ -64,15 +73,6 @@ a:link, a:visited, a:active, a:hover
     color: rgb(117, 117, 117);
     line-height: 20px;
     font-size: 1em;
-}
-
-#content
-{
-    font-family: "Sans serif", Serif;
-    font-size: 1.1em;
-    line-height: 150%;
-    margin-left: 20px;
-    margin-top: 30px;
 }
 
 #content p:first-of-type:first-letter
